# Universal_hall

./: 404.html  CMakeLists.txt  index.html
API/DMA/dma_api/: index.html
API/DMA/dma_compatibility/: index.html
API/GPIO/gpio_api/: index.html
API/GPIO/gpio_compatibility/: index.html
API/I2C_host/i2c_compatibility/: index.html
API/I2C_host/i2c_host_api/: index.html
API/I2C_slave/i2c_compatibility/: index.html
API/I2C_slave/i2c_slave_api/: index.html
API/SPI_host/spi_host_api/: index.html
API/SPI_host/spi_host_compatibility/: index.html
API/SPI_slave/spi_slave_api/: index.html
API/SPI_slave/spi_slave_compatibility/: index.html
API/UART/uart_api/: index.html
API/UART/uart_compatibility/: index.html
API/USB/usb_api/: index.html
API/USB/usb_compatibility/: index.html
assets/.doxy/atmelsam_i2c_host/: hashChanges.yaml
atmelsam_i2c_host/annotated/: index.html
atmelsam_i2c_host/class_member_enums/: index.html
atmelsam_i2c_host/class_member_functions/: index.html
atmelsam_i2c_host/class_member_typedefs/: index.html
atmelsam_i2c_host/class_member_variables/: index.html
atmelsam_i2c_host/class_members/: index.html
atmelsam_i2c_host/classes/: index.html
atmelsam_i2c_host/dir_52c912f73dac9c4c0e442232e1b2bd80/: index.html
atmelsam_i2c_host/files/: index.html
atmelsam_i2c_host/functions/: index.html
atmelsam_i2c_host/hal__i2c__host_8h/: index.html
atmelsam_i2c_host/hal__i2c__host_8h_source/: index.html
atmelsam_i2c_host/hierarchy/: index.html
atmelsam_i2c_host/links/: index.html
atmelsam_i2c_host/macros/: index.html
atmelsam_i2c_host/modules/: index.html
atmelsam_i2c_host/namespace_member_enums/: index.html
atmelsam_i2c_host/namespace_member_functions/: index.html
atmelsam_i2c_host/namespace_member_typedefs/: index.html
atmelsam_i2c_host/namespace_member_variables/: index.html
atmelsam_i2c_host/namespace_members/: index.html
atmelsam_i2c_host/namespaces/: index.html
atmelsam_i2c_host/pages/: index.html
atmelsam_i2c_host/variables/: index.html
code_style/: index.html
contributing/: index.html
hal/: hal_pinmux.h  hal_uart.h
test/ti_iwr68xx/: CMakeLists.txt
test/ti_iwr68xx/gpio/: gpio.cpp
test/ti_iwr68xx/mocks/: AWR6843.h  AWR6843_GIO.h  AWR6843_IOMUX.h  AWR6843_types.h
test/ti_iwr68xx/pinmux/: pinmux.cpp
(+73 files in other folders)
